# Rustbar

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: pages.yml  rust.yml
crates/rustbar-core/: Cargo.toml
crates/rustbar-core/src/: lib.rs  session.rs
scanner/: Cargo.toml
scanner/src/: lib.rs
www/: index.html
www/css/: demo.css  scanner-overlay.css
www/js/: camera.js  capture.js  decode-worker.js  demo.js  rustbar.js  scan-state.js  scanner-ui.js
