[package]
name = "rustbar-scanner"
version = "0.1.0"
edition = "2021"
description = "QR code decoder compiled to WebAssembly for browser scanning"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rqrr = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
