[package]
name = "rustbar-scanner"
version = "0.1.0"
edition = "2021"
description = "QR code decoder compiled to WebAssembly for browser scanning"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }
rxing = { version = "0.9.0", default-features = false, features = [
  "image",
  "image_formats",
  "encoding_rs",
  "decoders",
  "qrcode",
  "datamatrix",
  "wasm_support",
  "multi_barcode_readers",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
