[package]
name = "rustbar-scanner"
version = "0.1.0"
edition = "2021"
description = "QR code decoder compiled to WebAssembly for browser scanning"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustbar-core = { path = "../crates/rustbar-core" }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
