[package]
name = "rustbar-core"
version = "0.1.0"
edition = "2021"
description = "Shared barcode decode pipeline (rxing)"
license = "MIT OR Apache-2.0"

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }
rxing = { version = "0.9.0", default-features = false, features = [
  "image",
  "image_formats",
  "encoding_rs",
  "decoders",
  "qrcode",
  "datamatrix",
  "multi_barcode_readers",
] }
